--- a/flexboxstarter.html
+++ b/flexboxstarter.html
@@ -40,7 +40,7 @@
 	</section>
 
 	<section class="lowergroup">
-		<h2 class="one">FlexBox</h2>
+		<h2 class="one">FlexBoxTest</h2>
        
 		<p class="one">This is where your explanation for "FlexBox" goes</p>
         	
