--- a/flexboxstarter.html
+++ b/flexboxstarter.html
@@ -14,7 +14,7 @@
 	<section class="lowergroup">
 		<h2 class="one">FlexBox</h2>
 		
-		<p class="one">This is where your explanation for "FlexBox" goes</p>
+		<p class="one">Test</p>
        
 	</section>
 
